plugins {
    id 'java'
    id "com.diffplug.spotless" version "5.15.0"
    id "name.remal.sonarlint" version "1.5.0"
}

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

compileJava.dependsOn 'spotlessApply'

spotless {
    java {
        eclipse().configFile('meta/formatting/google-style-eclipse.xml')
    }
}
